[gd_scene load_steps=3 format=2]

[ext_resource path="res://widgets/TextureCanvas.tscn" type="PackedScene" id=1]
[ext_resource path="res://widgets/TextureWidget.gd" type="Script" id=2]

[node name="TextureWidget" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="TextureViewport" type="ViewportContainer" parent="VBoxContainer"]
margin_right = 400.0
margin_bottom = 400.0

[node name="Viewport" type="Viewport" parent="VBoxContainer/TextureViewport"]
size = Vector2( 400, 400 )
handle_input_locally = false
render_target_update_mode = 3

[node name="TextureCanvas" parent="VBoxContainer/TextureViewport/Viewport" instance=ExtResource( 1 )]
unique_name_in_owner = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 404.0
margin_right = 400.0
margin_bottom = 424.0

[node name="Frame1" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 20.0
margin_bottom = 20.0
text = "1"

[node name="Frame2" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 24.0
margin_right = 44.0
margin_bottom = 20.0
text = "2"

[node name="Frame3" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 48.0
margin_right = 68.0
margin_bottom = 20.0
text = "3"

[connection signal="frame_changed" from="VBoxContainer/TextureViewport/Viewport/TextureCanvas" to="." method="_on_TextureCanvas_frame_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Frame1" to="." method="_on_Frame1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Frame2" to="." method="_on_Frame2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Frame3" to="." method="_on_Frame3_pressed"]
